<resources>
    <string name="app_name">Calculadora de Notas</string>
    <string name="action_settings">Settings</string>
    <string name="btnCalcula">Calcular Média(s)</string>
    <string name="rdoBimetre1">1º Bimestre</string>
    <string name="rdoBimetre2">1º e 2º Bimestres</string>
    <string name="lblParcial1">Nota Parcial 1:</string>
    <string name="lblOficial1">Nota Oficial 1:</string>
    <string name="lblParcial2">Nota Parcial 2:</string>
    <string name="lblOficial2">Nota Oficial 2:</string>
    <string name="lblSeleciona">Selecione uma opção:</string>
    <string name="title_activity_act_inicial">ActInicial</string>
    <string name="btnCalc">Calcular Notas</string>
    <string name="btnFormulas">Formas de Cálculos</string>
    <string name="title_activity_act_forma">Forma de Cálculo</string>
    <string name="txtCalculo">As notas são calculadas de acordo com a formula abaixo:</string>
    <string name="media1">Média do Bimestre = (Nota da Parcial x 0,3) + ( Nota da Oficial x 0,7).</string>
    <string name="mediaFinal">A nota final é calculada de acordo com a formula abaixo:</string>
    <string name="mediaFinal2">Média Final = (Nota 1º Bim x 0,4) + (Nota 1º Bim x 0,6).</string>
    <string name="infoAprovado">Caso a Média Final seja maior ou igual a 7,0 o aluno estará aprovado!</string>
    <string name="Zeroa10">Nota de 0 a 10</string>
    <string name="lblmedia1b">Média do 1º Bimestre:</string>
    <string name="lblmedia2">Média</string>

</resources>
